[package]
name = "v502-rust"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for the V502 C library"
authors = ["zCubed (Liam R)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
cc = "1.0"